--- a/about.html
+++ b/about.html
@@ -462,13 +462,13 @@
           <h2>关于SPIN Lab</h2>
           <p>
             SPIN Lab（Spatial Intelligence
-            Laboratory）成立于2025年，是中国科学技术大学人工智能领域的重要研究团队。实验室聚焦于人工智能（AI）与具身智能的前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
+            Laboratory）成立于2025年，聚焦于空间智能前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
           </p>
           <p>
-            实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"让智能体真正理解并作用于物理世界"为使命，注重理论创新与硬件落地结合。
+            实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"Empowering 3D Intelligence for the Autonomous World"为使命，注重理论创新与硬件落地结合。
           </p>
           <p>
-            实验室拥有先进的实验平台和开源生态，并欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动具身智能从实验室走向真实世界。我们致力于培养具有国际视野和创新能力的高水平研究人才。
+            实验室拥有先进的实验平台和开源生态，并欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动空间智能从实验室走向真实世界。我们致力于培养具有国际视野和创新能力的高水平研究人才。
           </p>
         </div>
         <div class="about-image">
@@ -496,7 +496,7 @@
             <i class="fas fa-eye"></i>
           </div>
           <h3>我们的愿景</h3>
-          <p>成为国际知名的具身智能研究中心，引领前沿技术研究方向，推动学术交流与产业合作，为人工智能的发展贡献力量。</p>
+          <p>成为国际知名的空间智能研究中心，引领前沿技术研究方向，推动学术交流与产业合作，为人工智能的发展贡献力量。</p>
         </div>
         <div class="mission-card">
           <div class="mission-icon">
