--- a/admission.html
+++ b/admission.html
@@ -432,7 +432,7 @@
       <div class="container">
         <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">加入我们的团队</h1>
         <p style="max-width: 800px; margin: 0 auto;">
-          我们欢迎对具身智能和机器学习研究充满热情的优秀学者加入我们的团队
+          我们欢迎对空间智能和具身智能研究充满热情的优秀学者加入我们的团队！
         </p>
       </div>
     </div>
