--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>欢迎访问SPIN Lab</h2>
             <p>
               中科大空间智能实验室（SPatial INtelligence
-              Lab）专注于空间智能、三维视觉、自主机器人以及多模态感知等前沿方向的研究。我们致力于赋予智能体在复杂三维环境中的感知、理解与交互能力，尤其关注在GNSS信号不可用或失效场景中的定位与导航问题。实验室研究涵盖激光雷达点云定位与建图、多模态融合学习、视觉语言导航、以及具身智能系统的构建。团队注重理论与应用结合，积极与国际知名高校和产业界合作，推动空间智能在机器人与人工智能领域的落地与发展。
+              Lab）专注于空间智能、三维视觉、自主机器人以及多模态感知等前沿方向的研究。实验室由中国科学技术大学人工智能与数据科学学院预聘副教授夏彦领衔，致力于赋予智能体在复杂三维环境中的感知、理解与交互能力，尤其关注在GNSS信号不可用或失效场景中的定位与导航问题。实验室研究涵盖激光雷达点云定位与建图、多模态融合学习、视觉语言导航、以及具身智能系统的构建。团队注重理论与应用结合，积极与国际知名高校和产业界合作，推动空间智能在机器人与人工智能领域的落地与发展。
             </p>
             <a href="about.html" class="btn">了解更多</a>
           </div>
@@ -286,8 +286,8 @@
           </div>
           <div class="member-info">
             <h3>夏彦</h3>
-            <p class="member-title">实验室主任 | 预聘副教授</p>
-            <p class="member-research">研究方向：具身智能、机器学习</p>
+            <p class="member-title">实验室PI</p>
+            <p class="member-research">研究方向：空间智能、三维视觉、智能无人系统、无人驾驶</p>
             <div class="member-social">
               <a href="https://saids.ustc.edu.cn/2024/1105/c36363a686123/page.htm"><i class="fas fa-envelope"></i></a>
               <a href="https://yan-xia.github.io/"><i class="fas fa-globe"></i></a>
