--- a/team.html
+++ b/team.html
@@ -318,7 +318,7 @@
             <h3>曹学伟</h3>
             <div class="member-position">博士研究生</div>
             <div class="member-short-bio">
-              曹学伟是中国科学技术大学SPIN-LAB的三年级博士生,师从夏彦导师。研究方向为3D点云处理领域,目前感兴趣的方向为多模态内容处理和AI for science。
+              曹学伟，中科大智能科学与技术专业在读博士研究生。
             </div>
             <div class="member-links">
               <a href="https://cxweb.site/"><i class="fas fa-envelope"></i></a>
@@ -336,7 +336,7 @@
             <h3>吴雨涵</h3>
             <div class="member-position">博士研究生</div>
             <div class="member-short-bio">
-              吴雨涵是中国科学技术大学SPIN-LAB实验室的在读博士研究生,由夏彦老师指导。专注于具身智能、移动机器人自主导航和移动操作任务的研究。
+              吴雨涵，中科大智能科学与技术专业在读博士研究生。
             </div>
             <div class="member-links">
               <a href="https://github.com/Yuhan321"><i class="fas fa-envelope"></i></a>
@@ -354,7 +354,7 @@
             <h3>王志超</h3>
             <div class="member-position">硕士研究生</div>
             <div class="member-short-bio">
-              王致超，中国科学技术大学SPIN-LAB实验室在读硕士研究生，师从夏彦导师。在具身智能、机器人等领域进行探索学习。
+              王致超，中科大在读硕士研究生。
             </div>
             <div class="member-links">
               <a href="http://github.com/Zhichao9264"><i class="fas fa-envelope"></i></a>
@@ -372,7 +372,7 @@
             <h3>王硕</h3>
             <div class="member-position">硕士研究生</div>
             <div class="member-short-bio">
-              王硕，中国科学技术大学SPIN-LAB实验室在读硕士研究生，师从夏彦导师。致力于具身智能、自动驾驶、多模态感知等领域的研究学习。
+              王硕，中科大在读硕士研究生。
             </div>
             <div class="member-links">
               <a href="#"><i class="fas fa-envelope"></i></a>
@@ -389,7 +389,7 @@
             <h3>曾斌</h3>
             <div class="member-position">硕士研究生</div>
             <div class="member-short-bio">
-              曾斌，中国科学技术大学SPIN-LAB实验室在读硕士研究生，由夏彦老师指导。感兴趣的研究方向为具身智能、自动驾驶与机器人感知定位。
+              曾斌，中科大在读硕士研究生。
             </div>
             <div class="member-links">
               <a href="#"><i class="fas fa-envelope"></i></a>
@@ -410,7 +410,7 @@
   <section class="join-us">
     <div class="container">
       <h2>加入我们</h2>
-      <p>我们实验室欢迎对具身智能、机器学习、人工智能等领域感兴趣的优秀学生和研究人员加入。我们提供开放、创新的研究环境和丰富的学术资源。</p>
+      <p>我们实验室欢迎对空间智能、智能无人系统等领域感兴趣的优秀学生和研究人员加入。我们提供开放、创新的研究环境和丰富的学术资源。</p>
       <a href="admission.html" class="btn">查看招生信息</a>
     </div>
   </section>
@@ -421,7 +421,7 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于空间智能、智能无人系统等领域的前沿研究，培养高水平研究人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
@@ -452,7 +452,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 SPIN Lab. 保留所有权利.</p>
+        <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
       </div>
     </div>
   </footer>
