--- a/about.html
+++ b/about.html
@@ -462,7 +462,7 @@
           <h2>关于SPIN Lab</h2>
           <p>
             SPIN Lab（Spatial Intelligence
-            Laboratory）成立于2025年，聚焦于空间智能前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
+            Laboratory）成立于2025年，聚焦于空间智能前沿研究，致力于探索智能体在物理世界中感知、决策并执行复杂任务的理论与技术。
           </p>
           <p>
             实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"Empowering 3D Intelligence for the Autonomous World"为使命，注重理论创新与硬件落地结合。
@@ -489,7 +489,7 @@
             <i class="fas fa-lightbulb"></i>
           </div>
           <h3>我们的使命</h3>
-          <p>以创新思维推动具身智能和空间认知领域的技术发展，解决真实世界中的复杂问题，培养具有国际竞争力的高水平研究人才。</p>
+          <p>以创新思维推动空间认知和具身智能领域的技术发展，解决真实世界中的复杂问题，培养具有国际竞争力的高水平研究人才。</p>
         </div>
         <div class="mission-card">
           <div class="mission-icon">
@@ -503,7 +503,7 @@
             <i class="fas fa-handshake"></i>
           </div>
           <h3>我们的价值观</h3>
-          <p>坚持创新、协作、开放、责任的价值观，追求学术卓越，重视技术伦理，致力于可持续发展。</p>
+          <p>坚持创新、协作、开放、责任的价值观，追求学术卓越，注重技术转化，推动知识与应用共进。</p>
         </div>
       </div>
     </div>
@@ -519,8 +519,8 @@
         <div class="about-text">
           <h2>研究理念</h2>
           <p>我们秉持"研究源于实际问题，技术服务于社会发展"的理念，强调理论与实践的结合，注重研究工作的原创性与实用性。</p>
-          <p>我们鼓励团队成员勇于挑战前沿难题，推动开放合作，促进学科交叉研究。我们特别关注人工智能的安全性、可解释性、隐私保护等问题，致力于发展负责任的人工智能技术。</p>
-          <p>同时，我们重视人才培养，为研究生提供国际化的学术环境和丰富的研究资源，培养他们的创新能力和团队协作精神。</p>
+          <p>我们鼓励团队成员勇于挑战前沿难题，推动开放合作，促进学科交叉研究。</p>
+          <p>同时，我们重视人才培养，为学生提供国际化的学术环境和丰富的研究资源，培养他们的创新能力和团队协作精神。</p>
         </div>
       </div>
     </div>
@@ -547,7 +547,7 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于空间智能与机器人等领域的前沿研究，培养高水平国际化人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
@@ -578,7 +578,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 SPIN Lab. 保留所有权利.</p>
+        <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
       </div>
     </div>
   </footer>
