--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="slide">
           <div class="slide-content">
-            <h2>重大研究成果</h2>
+            <h2>研究成果</h2>
             <p>实验室的核心研究方向包括：3D定位与建图、多模态感知、自主机器人的空间导航与理解、人机协作与物理交互，服务应用于智能家居、智能制造、无人驾驶等场景。</p>
             <a href="publications.html" class="btn">查看论文</a>
           </div>
@@ -380,7 +380,7 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于空间智能与机器人等领域的前沿研究，培养高水平国际化人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
