--- a/search-results.html
+++ b/search-results.html
@@ -309,7 +309,7 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于具身智能、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于空间智能与机器人等领域的前沿研究，培养高水平国际化人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
@@ -340,7 +340,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 SPIN Lab. 保留所有权利.</p>
+        <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
       </div>
     </div>
   </footer>
