--- a/team.html
+++ b/team.html
@@ -244,13 +244,13 @@
             <div class="member-position">中国科学技术大学人工智能与数据科学学院 预聘副教授</div>
             <div class="member-short-bio">
               博士毕业于德国慕尼黑工业大学，期间在牛津大学VGG实验室联合培养。研究成果发表于CVPR、ICCV、ECCV和ISPRS
-              JPRS等国际顶级会议和期刊
+              JPRS等国际顶级会议和期刊。
             </div>
             <div class="member-links">
               <a href="https://saids.ustc.edu.cn/2024/1105/c36363a686123/page.htm"><i class="fas fa-globe"></i></a>
-              <a href="https://yan-xia.github.io/"><i class="fas fa-envelope"></i></a>
-              <a href="https://saids.ustc.edu.cn/2024/1105/c36363a686123/page.htm"><i class="fab fa-google"></i></a>
-              <a href="https://yan-xia.github.io/"><i class="fab fa-github"></i></a>
+              <a href="yan.xia@ustc.edu.cn"><i class="fas fa-envelope"></i></a>
+              <a href="https://scholar.google.com/citations?user=xkBn4mMAAAAJ&hl=en"><i class="fab fa-google"></i></a>
+              <!-- <a href="https://yan-xia.github.io/"><i class="fab fa-github"></i></a> -->
             </div>
           </div>
         </div>
