--- a/admission.html
+++ b/admission.html
@@ -432,7 +432,7 @@
       <div class="container">
         <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">加入我们的团队</h1>
         <p style="max-width: 800px; margin: 0 auto;">
-          我们欢迎对空间智能和具身智能研究充满热情的优秀学者加入我们的团队！
+          欢迎对空间智能和具身智能研究充满热情的优秀学者加入！
         </p>
       </div>
     </div>
@@ -452,9 +452,9 @@
                 <li>全职博士后研究员职位</li>
                 <li>提供具有竞争力的薪酬待遇</li>
                 <li>申请国家和省部级博士后基金</li>
-                <li>参与高影响因子期刊论文发表</li>
+                <li>参与顶级会议论文发表</li>
                 <li>提供国际会议交流和访学机会</li>
-                <li>申请青年人才项目和教职岗位</li>
+                <!-- <li>申请青年人才项目和教职岗位</li> -->
               </ul>
               <a href="#application" class="btn">申请要求</a>
             </div>
@@ -469,7 +469,7 @@
               <ul>
                 <li>全日制博士研究生项目</li>
                 <li>学制3-5年</li>
-                <li>每年提供全额奖学金</li>
+                <li>提供奖学金和助教机会</li>
                 <li>参与国际顶级会议和论文发表</li>
                 <li>有机会参与国际交流和实习</li>
               </ul>
@@ -501,8 +501,8 @@
             </div>
             <div class="program-content">
               <ul>
-                <li>面向高年级本科生的科研训练</li>
-                <li>参与实验室实际研究项目</li>
+                <li>面向本科生的科研训练</li>
+                <li>参与实验室研究项目</li>
                 <li>提供本科生科研奖励计划</li>
                 <li>优秀者可推荐攻读研究生</li>
                 <li>培养学术研究和创新能力</li>
@@ -519,7 +519,7 @@
       <div class="container">
         <div class="section-title">
           <h2>申请要求</h2>
-          <p>我们期待具有扎实专业基础和研究热情的优秀学者加入我们的团队</p>
+          <p>期待具有扎实专业基础和研究热情的优秀学者加入我们的团队</p>
         </div>
 
         <div class="requirements-list">
@@ -549,7 +549,7 @@
               <i class="fas fa-code"></i>
               <h3>专业技能</h3>
             </div>
-            <p>熟练掌握Python、Java等编程语言，了解深度学习框架如PyTorch或TensorFlow，具备数据分析和机器学习基础知识。了解推荐系统、自然语言处理或图神经网络等相关领域为佳。</p>
+            <p>熟练掌握Python、Java等编程语言，熟悉深度学习框架如PyTorch或TensorFlow，具备数据分析和机器学习基础知识。</p>
           </div>
 
           <!-- 语言能力 -->
@@ -558,7 +558,7 @@
               <i class="fas fa-language"></i>
               <h3>语言能力</h3>
             </div>
-            <p>良好的中英文读写和交流能力，能够阅读英文文献，撰写英文论文，参与国际学术交流。国际学生需提供语言能力证明。</p>
+            <p>良好的中英文读写和交流能力，能够阅读英文文献，撰写英文论文，参与国际学术交流。</p>
           </div>
         </div>
       </div>
@@ -622,18 +622,18 @@
     <div class="contact-info">
       <div class="contact-header">
         <h3>联系方式</h3>
-        <p>如有问题，请通过以下方式联系我们。博士后申请者请直接联系实验室PI夏彦教授</p>
+        <p>请有意向的同学将个人简历（含GPA）、成绩单、代表性项目或论文材料发送至邮箱：yan.xia@ustc.edu.cn，邮件标题请注明“应聘实习/硕士/博士/博士后+姓名+学校”。</p>
       </div>
-      <div class="contact-methods">
+      <!-- <div class="contact-methods">
         <div class="contact-method">
           <div class="contact-icon">
             <i class="fas fa-envelope"></i>
           </div>
           <div>
-            <h4>招生邮箱</h4>
+            <h4>联系邮箱</h4>
             <p>yan.xia@ustc.edu.cn</p>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="contact-method">
           <div class="contact-icon">
             <i class="fas fa-phone"></i>
@@ -643,7 +643,7 @@
             <p>+86 123 4567 8901</p>
           </div>
         </div> -->
-        <div class="contact-method">
+        <!-- <div class="contact-method">
           <div class="contact-icon">
             <i class="fas fa-building"></i>
           </div>
@@ -651,7 +651,7 @@
             <h4>招生办公室</h4>
             <p>中国科学技术大学人工智能与数据科学学院</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     </div>
@@ -664,7 +664,7 @@
       <div class="footer-content">
         <div class="footer-column">
           <h3>关于我们</h3>
-          <p>SPIN Lab致力于推荐系统、机器学习等领域的前沿研究，培养高水平研究人才。</p>
+          <p>SPIN Lab致力于空间智能与机器人等领域的前沿研究，培养高水平国际化人才。</p>
         </div>
         <div class="footer-column">
           <h3>快速链接</h3>
@@ -695,7 +695,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 SPIN Lab. 保留所有权利.</p>
+        <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
       </div>
     </div>
   </footer>
