修复移动端标题显示问题并更新内容
- 优化移动端logo字体大小，确保完整显示
- 添加响应式设计，支持不同屏幕尺寸
- 更新页面内容和图片资源
- 改进移动端用户体验

--- a/admission.html
+++ b/admission.html
@@ -634,7 +634,7 @@
             <p>yan.xia@ustc.edu.cn</p>
           </div>
         </div> -->
-        <!-- <div class="contact-method">
+      <!-- <div class="contact-method">
           <div class="contact-icon">
             <i class="fas fa-phone"></i>
           </div>
@@ -643,7 +643,7 @@
             <p>+86 123 4567 8901</p>
           </div>
         </div> -->
-        <!-- <div class="contact-method">
+      <!-- <div class="contact-method">
           <div class="contact-icon">
             <i class="fas fa-building"></i>
           </div>
@@ -652,7 +652,7 @@
             <p>中国科学技术大学人工智能与数据科学学院</p>
           </div>
         </div> -->
-      </div>
+    </div>
     </div>
     </div>
     </section>
@@ -676,7 +676,7 @@
             <li><a href="publications.html">学术成果</a></li>
           </ul>
         </div>
-        <div class="footer-column">
+        <!-- <div class="footer-column">
           <h3>更多资源</h3>
           <ul>
             <li><a href="#">研究数据集</a></li>
@@ -684,7 +684,7 @@
             <li><a href="#">学术资源</a></li>
             <li><a href="#">实验室内网</a></li>
           </ul>
-        </div>
+        </div> -->
         <div class="footer-column">
           <h3>订阅我们</h3>
           <p>订阅我们的通讯，获取最新研究动态</p>
