--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="about.html" class="btn">了解更多</a>
           </div>
           <div class="slide-image">
-            <img src="images/shiyanshi.jpg " alt="实验室全景">
+            <img src="images/keda1.jpg " alt="实验室全景">
           </div>
         </div>
         <div class="slide">
@@ -68,7 +68,7 @@
             <a href="publications.html" class="btn">查看论文</a>
           </div>
           <div class="slide-image">
-            <img src="images/shiyanshi2.jpg" alt="研究成果">
+            <img src="images/keda2.jpg" alt="研究成果">
           </div>
         </div>
         <div class="slide">
@@ -98,13 +98,31 @@
     <div class="container">
       <h2 class="section-title">最新动态</h2>
       <div class="news-grid">
+
+        <div class="news-item">
+          <div class="news-image">
+            <img src="images/news.jpg" alt="新闻动态">
+            <div class="news-date">
+              <span class="day">15</span>
+              <span class="month">6月</span>
+              <span class="year">2025</span>
+            </div>
+          </div>
+          <div class="news-content">
+            <span class="badge">学术活动</span>
+            <h3>实验室举办ICCV学术研讨会</h3>
+            <p>我们实验室成功举办了"前沿具身智能技术"专题研讨会，多位相关学者参与...</p>
+            <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
+          </div>
+        </div>
+
         <div class="news-item featured">
           <div class="news-image">
             <img src="images/sparasealign.png" alt="新闻动态">
             <div class="news-date">
               <span class="day">15</span>
               <span class="month">6月</span>
-              <span class="year">2025</span>
+              <span class="year">2024</span>
             </div>
           </div>
           <div class="news-content">
@@ -130,22 +148,7 @@
             <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
-        <div class="news-item">
-          <div class="news-image">
-            <img src="images/news.jpg" alt="新闻动态">
-            <div class="news-date">
-              <span class="day">25</span>
-              <span class="month">4月</span>
-              <span class="year">2023</span>
-            </div>
-          </div>
-          <div class="news-content">
-            <span class="badge">学术活动</span>
-            <h3>实验室成功举办学术研讨会</h3>
-            <p>我们实验室成功举办了"前沿具身智能技术"专题研讨会，多位相关学者参与...</p>
-            <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
-          </div>
-        </div>
+
       </div>
       <div class="view-all-container">
         <a href="publications.html" class="btn btn-outline">查看全部新闻</a>
@@ -160,36 +163,35 @@
       <div class="areas-grid">
         <div class="area-card">
           <div class="area-icon">
-            <i class="fas fa-robot"></i>
+            <i class="fas fa-eye"></i>
           </div>
-          <h3>智能体感知与环境理解</h3>
+          <h3>三维视觉</h3>
           <p>
-            聚焦多模态感知技术（视觉 / 听觉 / 触觉），研究智能体对复杂环境中物体、场景的精准识别与动态理解，构建高精度语义地图，强化自主感知与空间定位能力。
-          </p>
+            研究智能体对复杂环境中物体的精准识别与动态理解。</p>
           <a href="about.html#generative" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
-            <i class="fas fa-balance-scale"></i>
+            <i class="fas fa-space-shuttle"></i>
           </div>
-          <h3>智能体决策与规划</h3>
-          <p>基于强化学习与认知推理，开发长时序决策算法，探索智能体对任务语义的分解能力、多步规划策略及动态环境下的实时策略调整机制。</p>
+          <h3>空间智能</h3>
+          <p>研究构建高精度语义地图，强化自主感知与空间定位能力。</p>
           <a href="about.html#fairness" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
-            <i class="fas fa-link"></i>
+            <i class="fas fa-robot"></i>
           </div>
-          <h3>智能体运动控制与执行</h3>
-          <p>结合机器人动力学与机械结构优化，研究高精度运动控制算法（力控 / 协作控制），实现智能体在复杂场景中的灵活移动、物体操作及人机安全交互。</p>
+          <h3>机器人</h3>
+          <p>研究机器人在复杂场景中的灵活移动、物体操作等任务。</p>
           <a href="about.html#causal" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
             <i class="fas fa-project-diagram"></i>
           </div>
-          <h3>多智能体协同与交互</h3>
-          <p>构建多智能体通信协议与协作策略，研究群体任务分配、冲突解决机制及自然人机交互技术，提升多主体系统的协同效率与人机协作体验。。</p>
+          <h3>无人驾驶</h3>
+          <p>研究无人驾驶技术中的环境感知以及定位等相关任务。</p>
           <a href="about.html#gnn" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
@@ -204,7 +206,7 @@
         <div class="tab-headers">
           <span class="tab active" data-tab="recent">最新论文</span>
           <span class="tab" data-tab="top">顶会论文</span>
-          <span class="tab" data-tab="projects">研究项目</span>
+          <!-- <span class="tab" data-tab="projects">研究项目</span> -->
         </div>
         <div class="tab-content">
           <div class="tab-pane active" id="recent">
@@ -265,11 +267,65 @@
             </div>
           </div>
           <div class="tab-pane" id="top">
-            <!-- 顶会论文列表 -->
+            <ul class="publication-list">
+              <li>
+                <div class="pub-info">
+                  <span class="pub-venue">CVPR 2025</span>
+                  <h4>SparseAlign: A Fully Sparse Framework for Cooperative Object Detection</h4>
+                  <p class="pub-authors">Yunshuang Yuan, Yan Xia†, Daniel Cremers, Monika Sester</p>
+                  <div class="pub-links">
+                    <a href="https://arxiv.org/pdf/2503.12982" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
+                    <a href="#" class="pub-link"><i class="fab fa-github"></i> 代码</a>
+                    <a href="#" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
+                  </div>
+                </div>
+                <div class="pub-tags">
+                  <span class="tag">Cooperative Object Detection</span>
+                  <span class="tag">Fully Sparse Framework</span>
+
+                </div>
+              </li>
+              <li>
+                <div class="pub-info">
+                  <span class="pub-venue">CVPR 2025</span>
+                  <h4>Localizing Events in Videos with Multimodal Queries.</h4>
+                  <p class="pub-authors">Gengyuan Zhang, Mang Ling Ada Fok, Jialu Ma, Yan Xia†, Daniel Cremers, Philip
+                    Torr, Volker Tresp, Jindong Gu. </p>
+                  <div class="pub-links">
+                    <a href="https://arxiv.org/pdf/2406.10079" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
+                    <a href="#" class="pub-link"><i class="fab fa-github"></i> 代码</a>
+                    <a href="#" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
+                  </div>
+                </div>
+                <div class="pub-tags">
+                  <span class="tag">Multimodal Queries (MQs)</span>
+                  <span class="tag">Video Event Localization</span>
+                </div>
+              </li>
+              <li>
+                <div class="pub-info">
+                  <span class="pub-venue">CVPR 2024</span>
+                  <h4>Text2Loc: 3D Point Cloud Localization from Natural Language</h4>
+                  <p class="pub-authors">Yan Xia*†, Letian Shi*, Zifeng Ding, João F. Henriques, Daniel Cremers</p>
+                  <div class="pub-links">
+                    <a href="https://arxiv.org/pdf/2311.15977" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
+                    <a href="#" class="pub-link"><i class="fab fa-github"></i> 代码</a>
+                    <a href="#" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
+                  </div>
+                </div>
+                <div class="pub-tags">
+                  <span class="tag">3D Point Cloud Localization</span>
+                  <span class="tag">hierarchical transformer</span>
+                </div>
+              </li>
+            </ul>
+            <div class="view-all-container">
+              <a href="publications.html" class="btn btn-outline">查看所有论文</a>
+            </div>
           </div>
-          <div class="tab-pane" id="projects">
-            <!-- 研究项目列表 -->
-          </div>
+          <!-- <div class="tab-pane" id="projects">
+          
+          </div> -->
         </div>
       </div>
     </div>
@@ -368,7 +424,7 @@
         </div>
         <div class="contact-map">
           <!-- 这里可以嵌入地图，或者使用静态图片代替 -->
-          <img src="images/map1.png" alt="实验室地图">
+          <img src="images/zhkeda.jpg" alt="实验室地图">
         </div>
       </div>
     </div>
@@ -392,7 +448,7 @@
             <li><a href="publications.html">学术成果</a></li>
           </ul>
         </div>
-        <div class="footer-column">
+        <!-- <div class="footer-column">
           <h3>更多资源</h3>
           <ul>
             <li><a href="#">研究数据集</a></li>
@@ -400,7 +456,7 @@
             <li><a href="#">学术资源</a></li>
             <li><a href="#">实验室内网</a></li>
           </ul>
-        </div>
+        </div> -->
         <div class="footer-column">
           <h3>订阅我们</h3>
           <p>订阅我们的通讯，获取最新研究动态</p>
