--- a/about.html
+++ b/about.html
@@ -465,7 +465,8 @@
             Laboratory）成立于2025年，聚焦于空间智能前沿研究，致力于探索智能体在物理世界中感知、决策并执行复杂任务的理论与技术。
           </p>
           <p>
-            实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"Empowering 3D Intelligence for the Autonomous World"为使命，注重理论创新与硬件落地结合。
+            实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"Empowering 3D
+            Intelligence for the Autonomous World"为使命，注重理论创新与硬件落地结合。
           </p>
           <p>
             实验室拥有先进的实验平台和开源生态，并欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动空间智能从实验室走向真实世界。我们致力于培养具有国际视野和创新能力的高水平研究人才。
@@ -514,7 +515,7 @@
     <div class="container">
       <div class="about-content">
         <div class="about-image">
-          <img src="images/shiyanshi2.jpg" alt="研究环境">
+          <img src="images/keda2.jpg" alt="研究环境">
         </div>
         <div class="about-text">
           <h2>研究理念</h2>
@@ -559,7 +560,7 @@
             <li><a href="publications.html">学术成果</a></li>
           </ul>
         </div>
-        <div class="footer-column">
+        <!-- <div class="footer-column">
           <h3>更多资源</h3>
           <ul>
             <li><a href="#">研究数据集</a></li>
@@ -567,7 +568,7 @@
             <li><a href="#">学术资源</a></li>
             <li><a href="#">实验室内网</a></li>
           </ul>
-        </div>
+        </div> -->
         <div class="footer-column">
           <h3>订阅我们</h3>
           <p>订阅我们的通讯，获取最新研究动态</p>
