--- a/search-results.html
+++ b/search-results.html
@@ -322,27 +322,27 @@
           </ul>
         </div>
         <div class="footer-column">
-          <h3>更多资源</h3>
+          <!-- <h3>更多资源</h3>
           <ul>
             <li><a href="#">研究数据集</a></li>
             <li><a href="#">开源代码</a></li>
             <li><a href="#">学术资源</a></li>
             <li><a href="#">实验室内网</a></li>
           </ul>
+        </div> -->
+          <div class="footer-column">
+            <h3>订阅我们</h3>
+            <p>订阅我们的通讯，获取最新研究动态</p>
+            <form class="subscribe-form">
+              <input type="email" placeholder="您的邮箱地址">
+              <button type="submit" class="btn">订阅</button>
+            </form>
+          </div>
         </div>
-        <div class="footer-column">
-          <h3>订阅我们</h3>
-          <p>订阅我们的通讯，获取最新研究动态</p>
-          <form class="subscribe-form">
-            <input type="email" placeholder="您的邮箱地址">
-            <button type="submit" class="btn">订阅</button>
-          </form>
+        <div class="footer-bottom">
+          <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
         </div>
       </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
-      </div>
-    </div>
   </footer>
 
   <!-- JavaScript -->
