--- a/team.html
+++ b/team.html
@@ -433,7 +433,7 @@
             <li><a href="publications.html">学术成果</a></li>
           </ul>
         </div>
-        <div class="footer-column">
+        <!-- <div class="footer-column">
           <h3>更多资源</h3>
           <ul>
             <li><a href="#">研究数据集</a></li>
@@ -441,7 +441,7 @@
             <li><a href="#">学术资源</a></li>
             <li><a href="#">实验室内网</a></li>
           </ul>
-        </div>
+        </div> -->
         <div class="footer-column">
           <h3>订阅我们</h3>
           <p>订阅我们的通讯，获取最新研究动态</p>
