--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
 
         <div class="news-item">
           <div class="news-image">
-            <img src="images/news.jpg" alt="新闻动态">
+            <img src="images/iccv.png" alt="新闻动态">
             <div class="news-date">
-              <span class="day">15</span>
-              <span class="month">6月</span>
+              <span class="day">19-23</span>
+              <span class="month">10月</span>
               <span class="year">2025</span>
             </div>
           </div>
           <div class="news-content">
             <span class="badge">学术活动</span>
-            <h3>实验室举办ICCV学术研讨会</h3>
-            <p>我们实验室成功举办了"前沿具身智能技术"专题研讨会，多位相关学者参与...</p>
+            <h3>即将举办ICCV Workshop专题研讨会</h3>
+            <p>此次研讨会主题为"Multi-modal Localization and Mapping (MuLMa)"</p>
             <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
