完善学术研讨会组织者信息 - 添加更多国际知名学者，优化会议详情展示

--- a/publications.html
+++ b/publications.html
@@ -590,7 +590,7 @@
       <!-- 学术研讨会专题 -->
       <div class="publications-year" data-category="workshop" style="display: none;">
         <div class="year-heading">
-          <h2>学术研讨会</h2>
+          <!-- <h2>学术研讨会</h2> -->
           <div class="year-line"></div>
         </div>
 
@@ -605,8 +605,8 @@
             <h4 style="margin-bottom: 10px; color: #ff8f00; font-size: 1rem;">会议详情</h4>
             <div
               style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 10px; font-size: 0.9rem;">
-              <div><strong>举办时间：</strong> 2025年10月19-23日</div>
-              <div><strong>举办地点：</strong> 中国科学技术大学</div>
+              <div><strong>举办时间：</strong> 2025年10月</div>
+              <div><strong>举办地点：</strong> 夏威夷</div>
               <!-- <div><strong>会议规模：</strong> 约150人</div> -->
               <div><strong>会议语言：</strong> 英文</div>
             </div>
@@ -626,10 +626,10 @@
             </ul>
           </div> -->
 
-          <p class="publication-abstract">
+          <!-- <p class="publication-abstract">
             本次研讨会聚焦地理信息定位、空间智能、3D场景理解等前沿技术，邀请国内外知名学者分享最新研究成果。
             会议涵盖点云处理、视觉定位、多模态感知、协同感知等热点话题，为相关领域研究者提供学术交流平台。
-          </p>
+          </p> -->
 
           <div class="workshop-organizers"
             style="margin: 20px 0; padding: 20px; background-color: #f8f9fa; border-radius: 8px;">
@@ -638,7 +638,7 @@
             <!-- Yan Xia -->
             <div class="organizer-profile"
               style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
-              <div style="display: flex; align-items: flex-start; gap: 15px;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
                 <div style="min-width: 80px;">
                   <strong style="color: var(--primary-color); font-size: 1.1rem;">Yan Xia</strong>
                   <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">主席</div> -->
@@ -653,7 +653,7 @@
                     Intelligence at Technical University of Munich(TUM) and a research scientist at MunichCenter for
                     Machine Learning(MCML), working with Prof. Daniel Cremers.He obtained hisPhD degree from TUM in 2023
                     and was a visiting scholar in Visual Geometry Group(VGG) atUniversity of Oxford.His research
-                    interests include 3D vision, robotics, and autonomousdriving.。
+                    interests include 3D vision, robotics, and autonomousdriving.
                   </p>
                 </div>
               </div>
@@ -662,7 +662,7 @@
             <!-- Niclas Zeller -->
             <div class="organizer-profile"
               style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
-              <div style="display: flex; align-items: flex-start; gap: 15px;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
                 <div style="min-width: 80px;">
                   <strong style="color: var(--primary-color); font-size: 1.1rem;">Niclas Zeller</strong>
                   <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
@@ -685,7 +685,7 @@
             <!-- Daniel Cremers -->
             <div class="organizer-profile"
               style="margin-bottom: 10px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
-              <div style="display: flex; align-items: flex-start; gap: 15px;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
                 <div style="min-width: 80px;">
                   <strong style="color: var(--primary-color); font-size: 1.1rem;">Daniel Cremers</strong>
                   <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
@@ -705,6 +705,97 @@
                 </div>
               </div>
             </div>
+            <!-- Timothy D Barfoot -->
+            <div class="organizer-profile"
+              style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
+                <div style="min-width: 80px;">
+                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Timothy D Barfoot</strong>
+                  <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
+                </div>
+                <div style="flex: 1;">
+                  <div style="color: #007bff; font-weight: 500; margin-bottom: 8px;">
+                    教授，多伦多大学航空航天研究所
+                  </div>
+                  <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
+                    Timothy D Barfoot is a Professor at the University of Toronto Institute for AerospaceStudies. He has
+                    been conducting research in the area of navigation of mobile robotics forover 20 years, both in
+                    industry and academia, for applications including space exploration,mining, military, and
+                    transportation. He is a Fellow of the lEEE Robotics and AutomationSociety.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Luca Carlone -->
+            <div class="organizer-profile"
+              style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
+                <div style="min-width: 80px;">
+                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Luca Carlone</strong>
+                  <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
+                </div>
+                <div style="flex: 1;">
+                  <div style="color: #007bff; font-weight: 500; margin-bottom: 8px;">
+                    副教授，麻省理工学院（MIT）
+                  </div>
+                  <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
+                    Luca Carlone is the Boeing Career Development Associate Professor with the Department ofAeronautics
+                    and Astronautics, Massachusetts Institute of Technology (MIT), Cambridge, MAUSA, and a Principal
+                    Investigator with the Laboratory for Information & Decision Systems,MlT. His research interests
+                    include nonlinear estimation and probabilistic inference,numerical and distributed optimization, and
+                    geometric computer vision applied to sensing,perception, and decision-making in single and
+                    multi-robot systems.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="organizer-profile"
+              style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
+                <div style="min-width: 80px;">
+                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Niclas Zeller</strong>
+                  <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
+                </div>
+                <div style="flex: 1;">
+                  <div style="color: #007bff; font-weight: 500; margin-bottom: 8px;">
+                    教授，卡尔斯鲁厄应用科技大学(HKA)
+                  </div>
+                  <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
+                    Frank Dellaert is CTO at Verdant Robotics and is also a Professor at the School of
+                    InteractiveComputing at the Georgia Institute of Technology. His research focuses on probabilistic
+                    methods inrobotics and computer vision. He has applied Markov chain Monte Carlo sampling
+                    methodologies in avariety of novel settings, from multitarget tracking to the correspondence
+                    problem. Before that, withD. Fox and S. Thrun, he introduced the Monte Carlo localization method for
+                    robot localization, whichis now a standard and popular tool in mobile robotics.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="organizer-profile"
+              style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
+              <div style="display: block; align-items: flex-start; gap: 15px;">
+                <div style="min-width: 80px;">
+                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Niclas Zeller</strong>
+                  <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
+                </div>
+                <div style="flex: 1;">
+                  <div style="color: #007bff; font-weight: 500; margin-bottom: 8px;">
+                    副教授，首尔国立大学（SNU）
+                  </div>
+                  <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
+                    Ayoung Kim is an Associate Professor in the Department of Mechanical Engineering at Seoul
+                    NationalUniversity (SNU), leading the Robust Perception for Mobile Robotics lab.Before joining SNU,
+                    she wasat the Department of Civil and Environmental Engineering of the Korea Advanced Institute of
+                    Scienceand Technology (KAIST) from 2014 to 2021.Her research interest is perceptual robot autonomy
+                    fornavigation and spatial representation learning.
+                  </p>
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <!-- <div class="publication-links">
@@ -717,7 +808,7 @@
             <div class="publication-tags">
               <span class="publication-tag">空间智能</span>
               <span class="publication-tag">机器人感知</span>
-              <span class="publication-tag">3D视觉</span>
+              <span class="publication-tag">地理信息定位</span>
               <span class="publication-tag">国际研讨会</span>
             </div>
             <div class="publication-metrics">
