--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           <div class="news-image">
             <img src="images/iccv.png" alt="新闻动态">
             <div class="news-date">
-              <span class="day">19-23</span>
-              <span class="month">10月</span>
+              <span class="day">10月</span>
+              <!-- <span class="month">10月</span> -->
               <span class="year">2025</span>
             </div>
           </div>
@@ -120,8 +120,7 @@
           <div class="news-image">
             <img src="images/sparasealign.png" alt="新闻动态">
             <div class="news-date">
-              <span class="day">15</span>
-              <span class="month">6月</span>
+              <span class="day">6月</span>
               <span class="year">2024</span>
             </div>
           </div>
@@ -136,8 +135,7 @@
           <div class="news-image">
             <img src="images/tex2loc.png" alt="新闻动态">
             <div class="news-date">
-              <span class="day">10</span>
-              <span class="month">5月</span>
+              <span class="day">5月</span>
               <span class="year">2023</span>
             </div>
           </div>
