简化组织者机构信息显示 - 优化Timothy D Barfoot的机构名称展示

--- a/publications.html
+++ b/publications.html
@@ -715,7 +715,7 @@
                 </div>
                 <div style="flex: 1;">
                   <div style="color: #007bff; font-weight: 500; margin-bottom: 8px;">
-                    教授，多伦多大学航空航天研究所
+                    教授，多伦多大学(UofT)
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
                     Timothy D Barfoot is a Professor at the University of Toronto Institute for AerospaceStudies. He has
