--- a/publications.html
+++ b/publications.html
@@ -755,7 +755,7 @@
               style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
               <div style="display: block; align-items: flex-start; gap: 15px;">
                 <div style="min-width: 80px;">
-                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Niclas Zeller</strong>
+                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Frank Dellaert</strong>
                   <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
                 </div>
                 <div style="flex: 1;">
@@ -778,7 +778,7 @@
               style="margin-bottom: 20px; padding: 15px; background-color: white; border-radius: 6px; border: 1px solid #e9ecef;">
               <div style="display: block; align-items: flex-start; gap: 15px;">
                 <div style="min-width: 80px;">
-                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Niclas Zeller</strong>
+                  <strong style="color: var(--primary-color); font-size: 1.1rem;">Ayoung Kim</strong>
                   <!-- <div style="color: var(--dark-gray); font-size: 0.9rem; margin-top: 5px;">共同主席</div> -->
                 </div>
                 <div style="flex: 1;">
