网站内容全面更新 - 优化图片资源，更新页面内容，完善组织者信息

--- a/about.html
+++ b/about.html
@@ -473,7 +473,7 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="images/shiyanshi.jpg" alt="实验室环境">
+          <img src="images/shiyanshi2.jpg" alt="实验室环境">
         </div>
       </div>
     </div>
