--- a/publications.html
+++ b/publications.html
@@ -648,12 +648,12 @@
                     中国科学技术大学(USTC)
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
-                    Yan Xia is now a tenure-track Associate Professor at University of Science and Technology ofChina
-                    (USTC).He was a senior researcher in the Chair of Computer Vision & Artificial
+                    Yan Xia is now a tenure-track Associate Professor at University of Science and Technology of China
+                    (USTC). He was a senior researcher in the Chair of Computer Vision & Artificial
                     Intelligence at Technical University of Munich(TUM) and a research scientist at MunichCenter for
-                    Machine Learning(MCML), working with Prof. Daniel Cremers.He obtained hisPhD degree from TUM in 2023
-                    and was a visiting scholar in Visual Geometry Group(VGG) atUniversity of Oxford.His research
-                    interests include 3D vision, robotics, and autonomousdriving.
+                    Machine Learning(MCML), working with Prof. Daniel Cremers. He obtained hisPhD degree from TUM in
+                    2023 and was a visiting scholar in Visual Geometry Group(VGG) atUniversity of Oxford. His research
+                    interests include 3D vision, robotics, and autonomous driving.
                   </p>
                 </div>
               </div>
@@ -673,7 +673,8 @@
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
                     Niclas Zeller is a Professor at Karlsruhe University of Applied Sciences (HKA), at the facultyof
-                    Electrical Engineering and Information Technology. Before being appointed professor.Niclas worked as
+                    Electrical Engineering and Information Technology. Before being appointed professor. Niclas worked
+                    as
                     a senior computer vision & artificial intelligence researcher at Artisense andas an ADAS perception
                     developer at Visteon in Karlsruhe. In 2018, Niclas obtained a PhDfrom TUM. His research focuses on
                     SLAM and 3D perception based on different visual sensors.
@@ -695,12 +696,13 @@
                     教授，慕尼黑工业大学(TUM)
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
-                    Daniel Cremers is a Professor at TUM, where he is holding the Chair of Computer Vision &Artificial
-                    Intelligence. He is also a co-founder of Artisense, a deep-tech startup developingcomputer vision
-                    and Al solutions for robotics and autonomous driving. Daniel has served asan area chair for |CCV,
-                    ECCV, CVPR, ACCV, IROS, etc., and as a program chair for ACCV2014.In 2018, he was an organizer of
-                    ECCV in Munich. His publications received severaawards and have been cited more than 70000 times. In
-                    2016, Daniel received the LeibnizAward,the biggest award in German academia.
+                    Daniel Cremers is a Professor at TUM, where he is holding the Chair of Computer Vision & Artificial
+                    Intelligence. He is also a co-founder of Artisense, a deep-tech startup developing computer vision
+                    and Al solutions for robotics and autonomous driving. Daniel has served asan area chair for ICCV,
+                    ECCV, CVPR, ACCV, IROS, etc., and as a program chair for ACCV2014. In 2018, he was an organizer of
+                    ECCV in Munich. His publications received severa awards and have been cited more than 70000 times.
+                    In
+                    2016, Daniel received the Leibniz Award, the biggest award in German academia.
                   </p>
                 </div>
               </div>
@@ -718,7 +720,8 @@
                     教授，多伦多大学(UofT)
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
-                    Timothy D Barfoot is a Professor at the University of Toronto Institute for AerospaceStudies. He has
+                    Timothy D Barfoot is a Professor at the University of Toronto Institute for Aerospace Studies. He
+                    has
                     been conducting research in the area of navigation of mobile robotics forover 20 years, both in
                     industry and academia, for applications including space exploration,mining, military, and
                     transportation. He is a Fellow of the lEEE Robotics and AutomationSociety.
@@ -740,11 +743,11 @@
                     副教授，麻省理工学院（MIT）
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
-                    Luca Carlone is the Boeing Career Development Associate Professor with the Department ofAeronautics
+                    Luca Carlone is the Boeing Career Development Associate Professor with the Department of Aeronautics
                     and Astronautics, Massachusetts Institute of Technology (MIT), Cambridge, MAUSA, and a Principal
-                    Investigator with the Laboratory for Information & Decision Systems,MlT. His research interests
+                    Investigator with the Laboratory for Information & Decision Systems, MlT. His research interests
                     include nonlinear estimation and probabilistic inference,numerical and distributed optimization, and
-                    geometric computer vision applied to sensing,perception, and decision-making in single and
+                    geometric computer vision applied to sensing, perception, and decision-making in single and
                     multi-robot systems.
                   </p>
                 </div>
@@ -787,9 +790,9 @@
                   </div>
                   <p style="margin: 0; font-size: 0.9rem; line-height: 1.5; color: var(--dark-gray);">
                     Ayoung Kim is an Associate Professor in the Department of Mechanical Engineering at Seoul
-                    NationalUniversity (SNU), leading the Robust Perception for Mobile Robotics lab.Before joining SNU,
+                    NationalUniversity (SNU), leading the Robust Perception for Mobile Robotics lab. Before joining SNU,
                     she wasat the Department of Civil and Environmental Engineering of the Korea Advanced Institute of
-                    Scienceand Technology (KAIST) from 2014 to 2021.Her research interest is perceptual robot autonomy
+                    Scienceand Technology (KAIST) from 2014 to 2021. Her research interest is perceptual robot autonomy
                     fornavigation and spatial representation learning.
                   </p>
                 </div>
